vercre-issuer/src/snapshots/vercre_issuer__authorize__tests__authzn-ok.snap
---
source: vercre-issuer/src/authorize.rs
assertion_line: 467
expression: "&response"
---
code: "[code]"
state: "1234"
redirect_uri: "http://localhost:3000/callback"
