vercre-issuer/src/snapshots/vercre_issuer__authorize__tests__authzn-state.snap
---
source: vercre-issuer/src/authorize.rs
assertion_line: 499
expression: state
---
expires_at: "[expires_at]"
credential_issuer: "http://vercre.io"
client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
credential_configuration_ids:
  - EmployeeID_JWT
holder_id: normal_user
auth:
  redirect_uri: "http://localhost:3000/callback"
  code_challenge: "[code_challenge]"
  code_challenge_method: S256
  authorization_details:
    - type: openid_credential
      format: jwt_vc_json
      credential_definition:
        type:
          - VerifiableCredential
          - EmployeeIDCredential
        credentialSubject: {}
